@@ -1,38 +1,35 @@
 PyFeyn TODO
 -----------
 
- * Fix pattern stroke colour problem
+ * Fix pattern stroke colour problem.
 
  * Add specific layer choice when making/adding objects.
 
- * Provide blob labels.
+ * Provide point and blob attached labels.
 
- * Add label interface to points and also allow arrows to be explicitly 
-   added.
+ * Add label interface to points.
 
- * Make custom gluon deformer with a 3D option. Can use line's
-   intersections with itself and then chop out alternating crossings...
+ * Add unattached and line-parallel arrows (useful for momenta, helicities etc.)
+
+ * Make custom gluon deformer with a 3D option.
 
  * Allow control of deformed line nominal frequencies and amplitudes.
 
- * Provide "add one half cycle" method.
+ * Provide "add one (half) cycle" method. (Full cycle for gluon)
 
- * Allow setting of the straight components of decorated lines.
+ * Allow setting initial/final straight components of decorated lines.
 
  * Allow single lines to be deviated sharply (split?) round a vertex.
 
- * Allow the start and end phases of deformed lines to be specified.
+ * Allow the start and end phases of deformed lines to be specified?
 
  * Every diagram element should know its parent diagram.
 
  * Allow multiple diagrams in a single output image.
 
- * Add momentum and helicity arrows (via parallel deformer?).
-
  * Do hatched patterns better than PyX (or fix PyX's implementation).
 
- * Reinstate HepML functionality.
+ * Reinstate FeynML functionality.
 
  * Add SUSY particles (draw an extra fermion line through bosons). Maybe an
    isSusy(bool) method... Also, a graviton (interleaving vector boson lines).
-
