@@ -1,3 +1,13 @@
+2007-03-07  Andy Buckley  <andy@insectnation.org>
+
+	* Added unattached label implementation and updated example 1 to
+	demonstrate it.
+
+2007-03-05  Andy Buckley  <andy@insectnation.org>
+
+	* Moved Label to LineLabel and introduced placeholders for Label
+	and PointLabel.
+
 2007-02-09  Andy Buckley  <andy@insectnation.org>
 
 	* Added Vector and Scalar/Higgs line types.
